# iudicium

./: main.py  pyproject.toml
data/: SR-101-03032024-EN.xml  SR-101-03032024-RM.xml  results.csv
data/processed/: constitution_en.pkl  constitution_rm.pkl
data/translations/: 2025-09-09T15_26_50.714292+02_00_transformers_swissai_Apertus8BInstruct2509_0.7_0.9.json  2025-09-09T23:20:36.615329+02:00_transformers_swissai_Apertus8BInstruct2509_0.7_0.9.json  2025-09-10T02:59:12.391286+02:00_transformers_swissai_Apertus70BInstruct2509_0.7_0.9.json
notebooks/: 001_check_parsing.ipynb
scripts/: bump_version.py  run_vastai.sh
src/iudicium/: __init__.py  __main__.py  metrics.py  parser.py
src/iudicium/translators/: __init__.py  openrouter.py  transformers.py  transformers_translator.py
